--- a/config/rpi_nrf24_master.conf
+++ b/config/rpi_nrf24_master.conf
@@ -1,9 +1,9 @@
 wrf_id wrf0
 
 #nrf24_datarate: RF24_250KBPS,RF24_1MBPS,RF24_2MBPS
-nrf24_datarate RF24_250KBPS
+nrf24_datarate RF24_1MBPS
 #nrf24_channel: 90; //1-127, default 97
-nrf24_channel 90
+nrf24_channel 60
 
 mqtt_host localhost
 mqtt_port 8883
