added config description

--- a/config/rpi_nrf24_master.conf
+++ b/config/rpi_nrf24_master.conf
@@ -1,12 +1,20 @@
+#========================
+# id program yang akan diperiksa dalam pemanggilan pesan mqtt.
+#========================
 wrf_id rf0
 
+#========================
+#konfigurasi untuk nrf24
+#========================
 #nrf24_datarate: RF24_250KBPS,RF24_1MBPS,RF24_2MBPS
 nrf24_datarate RF24_1MBPS
 #nrf24_channel: 90; //1-127, default 97
 nrf24_channel 60
 
+#========================
 #konfigurasi mqtt. 
 #Sesuaikan dengan konfigurasi mosquitto yang telah diatur sebelumnya!
+#========================
 mqtt_host localhost
 mqtt_port 8883
 mqtt_user mqttuser
